--- a/src/main/resources/static/html/navbar.html
+++ b/src/main/resources/static/html/navbar.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body id="navbar-body">
 <nav id="navbar-template">
     <ul>
         <li><a href="ingredient.html">Mit køleskab</a></li>
         <li><a href="recipe.html">Opskrift</a></li>
-        <li> <a href="random.html"></a>Prøv lykken</li>
+        <li><a href="random.html">Prøv lykken</a></li>
     </ul>
 </nav>
 </body>
