--- a/src/main/resources/static/html/recipe.html
+++ b/src/main/resources/static/html/recipe.html
@@ -18,24 +18,7 @@
 </form>
 
 <div id="response-box">
-  <pre id="response"> Her er en opskrift på, hvordan du kan lave koldskål:
-
-Ingredienser:
-- 500 ml kærnemælk
-- 250 ml tykmælk eller skyr
-- 2 spiseskeer sukker
-- 1 tsk vaniljesukker
-- Saften fra 1 citron
-- Friske bær og/eller mynteblade til servering (valgfrit)
-
-Instruktioner:
-1. Start med at blande kærnemælken og tykmælken/skyren sammen i en stor skål.
-2. Tilsæt sukker, vaniljesukker og citronsaft. Rør godt rundt, indtil sukkeret er opløst.
-3. Smag til undervejs og juster eventuelt mængden af sukker og citronsaft efter din egen smag.
-4. Dæk skålen til med film eller en tallerken og stil den i køleskabet i mindst et par timer, gerne natten over. På denne måde får smagen tid til at udvikle sig, og konsistensen bliver mere cremet.
-5. Server koldskålen kølig og giv evt. friske bær eller mynteblade på toppen som pynt.
-
-Velbekomme! </pre>
+  <pre id="response" > </pre>
 </div>
 </div>
 </body>
