added Randomd page and changed get mapping

--- a/src/main/resources/static/html/navbar.html
+++ b/src/main/resources/static/html/navbar.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../css/navbar.css">
 </head>
 <body id="navbar-body">
 <nav id="navbar-template">
