--- a/src/main/resources/static/html/random.html
+++ b/src/main/resources/static/html/random.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../js/navbar.js" onload="loadNavbar();"></script>
+    <link rel="stylesheet" href="../css/randomCSS.css">
+    <script src="../js/recipeScript.js"></script>
 </head>
 <body>
+<nav id="navbar"></nav>
+<div id="body-div">
+    <h1>Få en tilfældig madopskrift! :-P</h1>
+
+    <form id="chatForm">
+        <button type="button" onclick="sendMessage('giv%20mig%20en%20tilfældig%20madopskrift')">Send</button>
+    </form>
+
+    <div id="response-box">
+  <pre id="response"></pre>
+    </div>
+</div>
+
 
 </body>
 </html>
