--- a/src/main/resources/static/html/navbar.html
+++ b/src/main/resources/static/html/navbar.html
@@ -8,9 +8,9 @@
 <body id="navbar-body">
 <nav id="navbar-template">
     <ul>
-        <li><a href="ingredient.html">Mit køleskab</a></li>
-        <li><a href="recipe.html">Opskrift</a></li>
-        <li><a href="random.html">Prøv lykken</a></li>
+        <li><a href="/ingredient">Mit køleskab</a></li>
+        <li><a href="/recipe">Opskrift</a></li>
+        <li><a href="/random">Prøv lykken</a></li>
     </ul>
 </nav>
 </body>
