--- a/src/main/resources/static/html/random.html
+++ b/src/main/resources/static/html/random.html
@@ -13,7 +13,7 @@
     <h1>Få en tilfældig madopskrift! :-P</h1>
 
     <form id="chatForm">
-        <button type="button" onclick="sendMessage('giv%20mig%20en%20tilfældig%20madopskrift')">Send</button>
+        <button type="button" onclick="sendMessage('giv%20mig%20en%20tilfældig%20madopskrift')">Prøv lykken</button>
     </form>
 
     <div id="response-box">
