--- a/src/main/resources/static/html/random.html
+++ b/src/main/resources/static/html/random.html
@@ -5,12 +5,14 @@
     <title>Title</title>
     <link rel="stylesheet" href="../css/randomCSS.css">
     <script src="../js/navbar.js" onload="loadNavbar();"></script>
-
+    <script async src="https://cse.google.com/cse.js?cx=b1b23556422bd47ff"></script>
 </head>
 <body>
 <nav id="navbar"></nav>
 <div id="body-div">
     <h1>Få en tilfældig madopskrift! :-P</h1>
+
+    <div id="resultContainer"> </div>
 
     <form id="chatForm">
         <button type="button" onclick="sendMessage('giv%20mig%20en%20tilfældig%20madopskrift')">Prøv lykken</button>
