--- a/src/main/resources/static/html/recipe.html
+++ b/src/main/resources/static/html/recipe.html
@@ -4,12 +4,15 @@
   <title>Start Website</title>
   <link rel="stylesheet" href="../css/recipeCSS.css">
   <script src="../js/navbar.js"  onload="loadNavbar();"></script>
+  <script async src="https://cse.google.com/cse.js?cx=b1b23556422bd47ff"></script>
 </head>
 <body>
 
 <nav id="navbar"></nav>
 <div id="body-div">
 <h1>Skriv en ret, du vil have! :-P</h1>
+
+  <div id="resultContainer"> </div>
 
 <form id="chatForm">
   <input type="text" id="message" placeholder="Skriv her">
