--- a/src/main/resources/static/html/ingredient.html
+++ b/src/main/resources/static/html/ingredient.html
@@ -12,6 +12,8 @@
 <div id="body-div">
     <h1>Indtast dine ingredienser! :-P</h1>
 
+    <div id="resultContainer" hidden> </div>
+
     <div id="suggested-ingredients">
         <div>Mælk</div>
         <div>Smør</div>
