styling, alert, onclick -> function
Tilføjet styling + popup med alert + flyttet inline html onclick til en funktion

--- a/src/main/resources/static/html/ingredient.html
+++ b/src/main/resources/static/html/ingredient.html
@@ -15,10 +15,10 @@
     <div id="resultContainer" hidden> </div>
 
     <div id="suggested-ingredients">
-        <div>Mælk</div>
-        <div>Smør</div>
+        <div>Maelk</div>
+        <div>Smoer</div>
         <div>Magarine</div>
-        <div>Æg</div>
+        <div>Aeg</div>
         <div>Mel</div>
         <div>Sukker</div>
         <div>Olie</div>
@@ -36,12 +36,12 @@
     </div>
 
     <form id="input-form">
-        <input type="text" id="input-field" placeholder="Skriv her">
-        <button type="button" id="add-button">Tilføj</button>
+        <input type="text" id="input-field" placeholder="Skriv din ingrediens her">
+        <button type="button" id="add-button">Tilfoej</button>
     </form>
     <form id="chatForm">
         <div id="added-ingredients"></div>
-        <button type="button" onclick="sendMessage('giv%20mig%20max%205%20forskellige%20opskrifter%20ud%20fra%20disse%20ingredienser:')">Send</button>
+        <button type="button" id="chat-button">Send</button>
     </form>
 
     <div id="response-box">
